objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>GF Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Discovery</fullName>
        </values>
        <values>
            <fullName>10%2E Void</fullName>
        </values>
        <values>
            <fullName>2%2E Assessment</fullName>
        </values>
        <values>
            <fullName>3%2E Recommendation</fullName>
        </values>
        <values>
            <fullName>4%2E Decision</fullName>
        </values>
        <values>
            <fullName>5%2E Commitment</fullName>
        </values>
        <values>
            <fullName>6%2E First Product TO</fullName>
        </values>
        <values>
            <fullName>7%2E Revenue</fullName>
        </values>
        <values>
            <fullName>8%2E Lost</fullName>
        </values>
        <values>
            <fullName>9%2E Dropped</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_CP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_CP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_CP3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_Date_CP1__c</fullName>
        <label>AM last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_Date_CP2__c</fullName>
        <label>AM last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_Date_CP3__c</fullName>
        <label>AM last modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_by_CP1__c</fullName>
        <label>AM last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_by_CP2__c</fullName>
        <label>AM last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_last_modified_by_CP3__c</fullName>
        <label>AM last modified by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Account Division issuing the opportunity. If you do not see the division, add the division to the Account.
Step 1 - Navigate to the Account
Step 2 - Scroll to the section Account Division
Step 3 - Click &quot;Add Account Division&quot; and save</inlineHelpText>
        <label>Account Division</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Division__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Division__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Account_Owner__r.FirstName  + &quot;  &quot; + Account.Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <description>Used to create sharing rule for Account Region</description>
        <label>Account Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <formula>TEXT(Account.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Unauthorized__c</fullName>
        <formula>Account.Unauthorized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Unauthorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_l_Process_Features__c</fullName>
        <inlineHelpText>Select any and all the additional process features required for the this opportunity. If there is an additional process feature required, but not listed, contact the GF System and Solutions Team to add it.</inlineHelpText>
        <label>Add&apos;l Process Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analog</fullName>
                </value>
                <value>
                    <fullName>BCDLite</fullName>
                </value>
                <value>
                    <fullName>eDRAM</fullName>
                </value>
                <value>
                    <fullName>High Voltage</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>MEMs</fullName>
                </value>
                <value>
                    <fullName>NVM - Flash</fullName>
                </value>
                <value>
                    <fullName>NVM - OTP</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
                <value>
                    <fullName>SiGe</fullName>
                </value>
                <value>
                    <fullName>SOI</fullName>
                </value>
                <value>
                    <fullName>MOSFET</fullName>
                </value>
                <value>
                    <fullName>IGBT</fullName>
                </value>
                <value>
                    <fullName>Mixed Signal</fullName>
                </value>
                <value>
                    <fullName>No Additional Features Required</fullName>
                </value>
                <value>
                    <fullName>eNVM</fullName>
                </value>
                <value>
                    <fullName>MTP</fullName>
                </value>
                <value>
                    <fullName>eFuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_1_Customer_Advantages__c</fullName>
        <description>What are the Customer&apos;s Advantages to go with Alternative Approach 1?</description>
        <label>Alternative 1 Customer Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_1_Customer_Disadvantages__c</fullName>
        <description>What are the Customer&apos;s Disadvantages to go with Alternative Approach 1?</description>
        <label>Alternative 1 Customer Disadvantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_2_Customer_Advantages__c</fullName>
        <description>What are the Customer&apos;s Advantages to go with Alternative Approach 2?</description>
        <label>Alternative 2 Customer Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_2_Customer_Disadvantages__c</fullName>
        <description>What are the Customer&apos;s Disdvantages to go with Alternative Approach 2?</description>
        <label>Alternative 2 Customer Disadvantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_3_Customer_Advantages__c</fullName>
        <description>What are the Customer&apos;s Advantages to go with Alternative Approach 3?</description>
        <label>Alternative 3 Customer Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_3_Customer_Disadvantages__c</fullName>
        <description>What are the Customer&apos;s Disadvantages to go with Alternative Approach 3?</description>
        <label>Alternative 3 Customer Disadvantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Approach_Solution_1__c</fullName>
        <label>Alternative Approach/Solution 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Approach_Solution_2__c</fullName>
        <label>Alternative Approach/Solution 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Approach_Solution_3__c</fullName>
        <label>Alternative Approach/Solution 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_and_Socket_Def__c</fullName>
        <label>Application and Socket Def</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Days_Decided_til_Approved__c</fullName>
        <description>Calculates Design Win Approval Days from Decided until Approved. If not Recommended, then value is -99. If not Decided, then counts days since Recommended.</description>
        <formula>IF (   TEXT(Date_Design_Win_Decided_by_SVP_Sales__c)   = &quot;&quot;, -99,
  IF (   TEXT(Date_Design_Win_Approved__c)  = &quot;&quot;, TODAY()- Date_Design_Win_Decided_by_SVP_Sales__c, Date_Design_Win_Approved__c - Date_Design_Win_Decided_by_SVP_Sales__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Design Win Approval Days from Decided until Approved. If not Decided, then value is -99. If not Approved, then counts days since Decided.</inlineHelpText>
        <label>Approval Days Decided til Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Days_Recommended_til_Decided__c</fullName>
        <description>Calculates Design Win Approval Days from Recommended until Decided. If not Recommended, then value is -99. If not Decided, then counts days since Recommended.</description>
        <formula>IF (  TEXT(Date_Design_Win_Recommended_by_Marketing__c)  = NULL, -99,
  IF ( TEXT(Date_Design_Win_Decided_by_SVP_Sales__c)  = NULL, FLOOR(TODAY()- Date_Design_Win_Recommended_by_Marketing__c), FLOOR(Date_Design_Win_Decided_by_SVP_Sales__c  - Date_Design_Win_Recommended_by_Marketing__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Design Win Approval Days from Recommended until Decided. If not Recommended, then value is -99. If not Decided, then counts days since Recommended.</inlineHelpText>
        <label>Approval Days Recommended til Decided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Days_Reviewed__c</fullName>
        <description>Calculates Design Win Approval Days from Reviewed until Recommended. If not Reviewed, then value is -99. If not Recommended, then counts days since reviewed.</description>
        <formula>IF ( TEXT(Date_Design_Win_Recommended_by_PLM__c) = &quot;&quot;, -99,
  IF (   TEXT(Date_Design_Win_Recommended_by_Marketing__c)  = &quot;&quot;, TODAY()- Date_Design_Win_Recommended_by_PLM__c, Date_Design_Win_Recommended_by_Marketing__c - Date_Design_Win_Recommended_by_PLM__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Design Win Approval Days from Reviewed until Recommended. If not Reviewed, then value is -99. If not Recommended, then counts days since reviewed.</inlineHelpText>
        <label>Approval Days PLM to Seg Mktg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Days_Reviewed_til_PLM_Reviewed__c</fullName>
        <formula>IF ( TEXT(Date_Design_Win_Rev_d_by_Territory_Head__c) = &quot;&quot;, -99, 
IF ( TEXT(Date_Design_Win_Recommended_by_PLM__c) = &quot;&quot;, TODAY()- Date_Design_Win_Rev_d_by_Territory_Head__c , Date_Design_Win_Recommended_by_PLM__c - Date_Design_Win_Rev_d_by_Territory_Head__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Days Reviewed til PLM Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Days_Submitted_til_Reviewed__c</fullName>
        <description>Calculates Design Win Approval Days from Submission until Reviewed. If not submitted, then value is -1. If not reviewed, then counts days since submitted.</description>
        <formula>IF ( TEXT(Date_Design_Win_Submitted_by_AM__c) = &quot;&quot;, -99,
  IF (  TEXT(Date_Design_Win_Rev_d_by_Territory_Head__c) = &quot;&quot;, TODAY()- Date_Design_Win_Submitted_by_AM__c, Date_Design_Win_Rev_d_by_Territory_Head__c - Date_Design_Win_Submitted_by_AM__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Design Win Approval Days from Submission until Reviewed. If not submitted, then value is -1. If not reviewed, then counts days since submitted.</inlineHelpText>
        <label>Approval Days Submitted til Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_GMPL_BX009_DW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use the link to locate proper GMPL by Geometry and Program(eg:GMPL-00004,GMPL-00008).</inlineHelpText>
        <label>Approved GMPL(DW)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <errorMessage>Please select a valid GMPL associated with this opportunity 
- GMPL record should have Active, Future, or EOL Status</errorMessage>
            <filterItems>
                <field>GMPL_BX009__c.Status__c</field>
                <operation>equals</operation>
                <value>Active, EOL, Future</value>
            </filterItems>
            <filterItems>
                <field>GMPL_BX009__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>GMPL</value>
            </filterItems>
            <infoMessage>Please select an approved GMPL associated to this opportunity. Please search by GMPL*</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_GMPL_Score__c</fullName>
        <description>If Baseline process platform = score = 5%
If  Non Baseline Process Platform selected, Approved_GMPL_BX009_DW = Null score = 0%
If  Non Baseline Process Platform selected, Approved_GMPL_BX009_DW != Null score = 5%</description>
        <formula>IF(OR(AND(Approved_GMPL_BX009_DW__c != null ,OR(ISPICKVAL( Process_Platform__c, &quot;GF-Full Custom&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Process Transfer&quot;), 
ISPICKVAL( Process_Platform__c, &quot;Customer Co-Developed&quot;))),OR(ISPICKVAL( Process_Platform__c, &quot;GF Baseline&quot;), 
ISPICKVAL( Process_Platform__c, &quot;GF Baseline plus custom modules&quot;))), 0.05, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved GMPL Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Configuration_Score__c</fullName>
        <label>Apttus Configuration Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assessment_Account_Qualifed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment - Account Qualifed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_SCOPE_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment - SCOPE Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedPID_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Primary Indicative Process Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Process_Geometry__c</field>
                <operation>equals</operation>
                <valueField>Process__c.Tech_Geometry__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedPID__c</fullName>
        <label>Primary Indicative Process Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_BU__c</fullName>
        <description>Edit permission for sales, CSR and Admins. Permission Set for specific individuals in Sales Operation.</description>
        <inlineHelpText>Select the BU supporting this Opportunity.
Contact Sales Ops for assistance in changing BU.
Common Platform, RF, ASIC</inlineHelpText>
        <label>Assigned BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP BU</fullName>
                    <default>true</default>
                    <label>CP BU</label>
                </value>
                <value>
                    <fullName>RF BU</fullName>
                </value>
                <value>
                    <fullName>ASIC BU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_PLM_UserId__c</fullName>
        <label>Assigned PLM UserId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_PLM__c</fullName>
        <label>Assigned PLM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Segment_Marketing_UserId__c</fullName>
        <label>Assigned Segment Marketing UserId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Segment_Marketing__c</fullName>
        <label>Assigned Segment Marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount_New__c</fullName>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount__c</fullName>
        <description>Field to capture Awarded amount once it is won</description>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount_w_o_NRE_New__c</fullName>
        <label>Awarded Amount w/o NRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount_w_o_NRE__c</fullName>
        <inlineHelpText>Field to capture Awarded amount w/o NRE</inlineHelpText>
        <label>Awarded Amount w/o NRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Field created to store IBM information</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bump__c</fullName>
        <inlineHelpText>If Bump is selected, be sure to include Opportunity Forecast % for Bump. This is the percentage of quarterly forecast that will require bumping.</inlineHelpText>
        <label>Bump</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CuP</fullName>
                </value>
                <value>
                    <fullName>SnAg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Project__c</fullName>
        <label>Business Project Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Sales</fullName>
                </value>
                <value>
                    <fullName>International Sales</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commitment_DW_approved_by_SVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment - DW approved by SVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Strength__c</fullName>
        <label>Competitor Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Volume__c</fullName>
        <label>Competitor Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Weakness__c</fullName>
        <label>Competitor Weakness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Pricing__c</fullName>
        <label>Is this Opportunity for Contract Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Forecast_in_Demantra__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Rule: Make the field read only once the record is saved.</description>
        <inlineHelpText>Once checked, this field cannot be unchecked.</inlineHelpText>
        <label>Exclude from Demand Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to generate oppty program for the first time. (For Batch Load only)</description>
        <label>Create Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_HCM_Login_ID__c</fullName>
        <description>Required for Siebel Integration
-Sent in the Outbound Message</description>
        <formula>CreatedBy.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Decision_Maker_Confirmed_DW_via__c</fullName>
        <label>Has Customer Decision Maker Confirmed DW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Decision_Maker_Score__c</fullName>
        <formula>IF(AND(ISPICKVAL( Customer_Decision_Maker__c, &quot;Yes&quot;),OR(ISPICKVAL( Process_Platform__c, &quot;GF-Full Custom&quot;),ISPICKVAL( Process_Platform__c, &quot;Customer Process Transfer&quot;),
ISPICKVAL( Process_Platform__c, &quot;Customer Co-Developed&quot;))), 0.05, 
IF(ISPICKVAL( Customer_Decision_Maker__c, &quot;Yes&quot;), 0.05, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Decision Maker Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Decision_Maker__c</fullName>
        <description>This is a required field prior to submission for Design Win Award.</description>
        <label>Customer Decision Maker (DW)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Part_Name__c</fullName>
        <description>This is DIW opp field</description>
        <label>Customer Part Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_s_Program_Name__c</fullName>
        <inlineHelpText>Provide the Customer&apos;s program name for the Project. If a program name is not available then identify the name of the product family.</inlineHelpText>
        <label>Customer&apos;s Program Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DG_Graded_Date__c</fullName>
        <description>Field updated from Deal Grading object Graded date field</description>
        <label>DG Graded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DG_TAT__c</fullName>
        <formula>DG_Graded_Date__c -  DG_create_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DG TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DG_create_Date__c</fullName>
        <label>DG create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DIW_Archival_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DIW Archival Load?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPAS_Rating__c</fullName>
        <description>Does this program include a DX or D0 rating requirement under Defense Priorities and Allocations System regulations?  (applies to OEM opptys)</description>
        <inlineHelpText>Defense Priorities and Allocations System regulations required?</inlineHelpText>
        <label>DPAS Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOA7</fullName>
                </value>
                <value>
                    <fullName>DXA7</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DWIN_Actual_By__c</fullName>
        <description>Field created to store IBM information</description>
        <label>DWIN Actual By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWIN_Outlook1__c</fullName>
        <label>DWIN Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#78C953</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFCC33</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#FF0000</color>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DWIN_Outlook__c</fullName>
        <formula>if(Probability&gt;=0.75,&quot;High&quot;,
if(AND(Probability &gt;= 0.50,Probability &lt;= 0.74),&quot;Medium&quot;,
if(Probability &lt;= 0.49,&quot;Low&quot;,&quot;&quot;
)))</formula>
        <label>DWIN Outlook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWIN_Year__c</fullName>
        <description>Field created to store IBM information</description>
        <label>DWIN Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWIN__c</fullName>
        <formula>Date_Design_Win_Approved__c - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DW_History_Count__c</fullName>
        <label>DW History Count</label>
        <summaryFilterItems>
            <field>Design_Win_Approval_History__c.Date_Design_Win_Approved__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Design_Win_Approval_History__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DW_Progress_Score1__c</fullName>
        <description>Formula field to track the progress of required Design Win Component</description>
        <formula>Paste_Commitment_Txt_from_Customer_Score__c + 
Process_Platform_Score__c + 
Is_GF_Committed_Score__c + 
Using_GF_PDK_DRC_or_SPICE_Score__c + 
Describe_Product_Development_Plan_Score__c + 
GF_Target_Share_Score__c + 
X1st_Product_To_Date_Score__c + 
X1st_Product_Production_Date_Score__c + 
Years_of_Production_score__c + 
Total_Life_Time_Revenue_score__c + 
Total_Design_Win_Revenue_score__c + 
Does_Entered_ASP_Align_with_Quote_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DW Progress Components
Customer Decision Maker
Post Txt Email
Process Platform
Is GF Committed
Using GF PDK
Describe Product Dev Plan
GF Target Share 
1st To Date
1st Prod Date
Yrs of Prod
Total Lifetime Rev
Total DW Rev
Quote #
ASP align</inlineHelpText>
        <label>DW Progress Score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DW_Progress_Score2__c</fullName>
        <formula>IF(OR(ISPICKVAL(Product_Line__c,&quot;ASIC&quot;),ISPICKVAL(Product_Line__c,&quot;RF&quot;),ISPICKVAL(Product_Line__c,&quot;SiPh&quot;),ISPICKVAL(Fab_Assignment_1__c,&quot;Fab 9&quot;),ISPICKVAL(Fab_Assignment_1__c,&quot;Fab 10&quot;)), IF(OR(Id = &quot;0069000000SLxTO&quot;,Id = &quot;0069000000Mulc3&quot;), 0.25, Customer_Decision_Maker_Score__c + Approved_GMPL_Score__c + Quote_Informal_Quote_Score__c + 0.05),IF(OR(Id = &quot;0069000000SLxTO&quot;,Id = &quot;0069000000Mulc3&quot;), 0.25, Customer_Decision_Maker_Score__c + Approved_GMPL_Score__c + Quote_Informal_Quote_Score__c + Apttus_Configuration_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DW Progress Score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DW_Progress__c</fullName>
        <label>DW Progress</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>